# Boids-GL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  \
assets/: basic.frag  basic.vert
assets/shaders/: basic.frag  basic.vert  light.frag  light.vert
include/: layout.hpp  read_file.hpp  shader.hpp  shapes.hpp  shapes.tpp  texture.hpp
include/boids/: boid.hpp  types.hpp
include/engine/: event.hpp  event_manager.hpp
include/wrap/gl/: buffer.hpp  model.hpp  shader.hpp  shader_program.hpp  texture.hpp
include/wrap/stb/: image.hpp
src/: layout.cpp  main.cpp  read_file.cpp  shader.cpp  shader_program.cpp  shapes.cpp  texture.cpp
src/boids/: types.cpp
src/engine/: event_manager.cpp
src/gl/: buffer.cpp  model.cpp  shader.cpp  shader_program.cpp  texture.cpp
src/stb/: image.cpp
